--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 black==21.11b1
 click==8.0.3
 Django==3.2.9
+django-extensions==3.1.5
 flake8==4.0.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
