--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==21.11b1
 click==8.0.3
 Django==3.2.9
 django-extensions==3.1.5
+djangorestframework==3.12.4
 flake8==4.0.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
