--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.4.1
 backcall==0.2.0
 black==21.11b1
+certifi==2021.10.8
+charset-normalizer==2.0.9
 click==8.0.3
 decorator==5.1.0
 Deprecated==1.2.13
@@ -10,6 +12,7 @@ django-filter==21.1
 django-redis==5.1.0
 djangorestframework==3.12.4
 flake8==4.0.1
+idna==3.3
 ipdb==0.13.9
 ipython==7.30.1
 jedi==0.18.1
@@ -30,11 +33,13 @@ python-decouple==3.5
 pytz==2021.3
 redis==3.5.3
 regex==2021.11.10
+requests==2.26.0
 sqlparse==0.4.2
 toml==0.10.2
 tomli==1.2.2
 traitlets==5.1.1
 typing-extensions==4.0.1
+urllib3==1.26.7
 wcwidth==0.2.5
 Werkzeug==2.0.2
 wrapt==1.13.3
