--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ black==21.11b1
 certifi==2021.10.8
 charset-normalizer==2.0.9
 click==8.0.3
+coreapi==2.3.3
+coreschema==0.0.4
 decorator==5.1.0
 Deprecated==1.2.13
 Django==3.2.9
@@ -11,14 +13,20 @@ django-extensions==3.1.5
 django-filter==21.1
 django-redis==5.1.0
 djangorestframework==3.12.4
+drf-yasg==1.20.0
 flake8==4.0.1
 idna==3.3
+inflection==0.5.1
 ipdb==0.13.9
 ipython==7.30.1
+itypes==1.2.0
 jedi==0.18.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
+packaging==21.3
 parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
@@ -29,16 +37,20 @@ ptyprocess==0.7.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
 Pygments==2.10.0
+pyparsing==3.0.6
 python-decouple==3.5
 pytz==2021.3
 redis==3.5.3
 regex==2021.11.10
 requests==2.26.0
+ruamel.yaml==0.17.17
+ruamel.yaml.clib==0.2.6
 sqlparse==0.4.2
 toml==0.10.2
 tomli==1.2.2
 traitlets==5.1.1
 typing-extensions==4.0.1
+uritemplate==4.1.1
 urllib3==1.26.7
 wcwidth==0.2.5
 Werkzeug==2.0.2
