--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,25 @@
 asgiref==3.4.1
 backcall==0.2.0
+backports.entry-points-selectable==1.1.1
 black==21.11b1
 certifi==2021.10.8
+cfgv==3.3.1
 charset-normalizer==2.0.9
 click==8.0.3
 coreapi==2.3.3
 coreschema==0.0.4
 decorator==5.1.0
 Deprecated==1.2.13
+distlib==0.3.3
 Django==3.2.9
 django-extensions==3.1.5
 django-filter==21.1
 django-redis==5.1.0
 djangorestframework==3.12.4
 drf-yasg==1.20.0
+filelock==3.4.0
 flake8==4.0.1
+identify==2.4.0
 idna==3.3
 inflection==0.5.1
 ipdb==0.13.9
@@ -26,12 +31,14 @@ MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
+nodeenv==1.6.0
 packaging==21.3
 parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==2.4.0
+pre-commit==2.16.0
 prompt-toolkit==3.0.23
 ptyprocess==0.7.0
 pycodestyle==2.8.0
@@ -40,11 +47,13 @@ Pygments==2.10.0
 pyparsing==3.0.6
 python-decouple==3.5
 pytz==2021.3
+PyYAML==6.0
 redis==3.5.3
 regex==2021.11.10
 requests==2.26.0
 ruamel.yaml==0.17.17
 ruamel.yaml.clib==0.2.6
+six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 tomli==1.2.2
@@ -52,6 +61,7 @@ traitlets==5.1.1
 typing-extensions==4.0.1
 uritemplate==4.1.1
 urllib3==1.26.7
+virtualenv==20.10.0
 wcwidth==0.2.5
 Werkzeug==2.0.2
 wrapt==1.13.3
